--- a/client/rest-api-client/src/app/app.component.html
+++ b/client/rest-api-client/src/app/app.component.html
@@ -1,3 +1,11 @@
+<style>
+  .myDiv {
+    border: 5px outset red;
+    background-color: lightblue;
+    text-align: center;
+  }
+  </style>
+<div class="myDiv">
 <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom box-shadow">
   <h5 class="my-0 mr-md-auto font-weight-normal">CAK Consulting</h5>
   <nav class="my-2 my-md-0 mr-md-3">
@@ -8,12 +16,41 @@
   </nav>
   <a class="btn btn-outline-primary" href="#">Sign up</a>
 </div>
+<h2>Parent template name</h2>
+<input [(ngModel)]="paranttemplate" /> <br /><br />
+<p> {{paranttemplate}} </p>
+<h2>Child template name</h2>
+<input [(ngModel)]="childtemplate"placeholder="Enter false if no child template needed" /> <br /><br />
+<p> {{childtemplate}} </p>
+<h2>Enter Fields</h2>
+<input (ngModel)="field" placeholder="Add a fields" aria-label="Recipient's username" aria-describedby="basic-addon1" #name>
+<div >
+  <button  (click)="clickEvent(name.value)" >Click Me</button>
+</div>
+<br /><br />
+<h2>Command to be executed</h2>
+<div class="row">
+  <div class="col">
+    <label for="exampleFormControlTextarea1">Command to be executed</label>
+    <textarea  id="exampleFormControlTextarea1" rows="3">
+    {{command}} {{paranttemplate}} {{childtemplate}} {{field}}
+  </textarea>
+  </div>
+</div>
+
+<button  type="submit">Copy command to Clipboard</button>
+
+</div>
+
+
+<div>
 
 <div class="container">
   <div class="py-5 text-center">
-    
+
     <h2>REST API Template Automation</h2>
-    <p class="lead">Below is an example form built entirely with Bootstrap's form controls. Each required form group has a validation state that can be triggered by attempting to submit the form without completing it.</p>
+    <p class="lead">Below is an example form built entirely with Bootstrap's form controls. Each required form group has
+      a validation state that can be triggered by attempting to submit the form without completing it.</p>
   </div>
 
   <div class="row">
@@ -71,13 +108,8 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6 mb-3">
-            <label for="firstName">Parent name</label>
-            <input type="text" class="form-control" id="firstName" placeholder="" value="" required>
-            <div class="invalid-feedback">
-              Valid first name is required.
-            </div>
-          </div>
+
+
           <div class="col-md-6 mb-3">
             <label for="lastName">Child name</label>
             <input type="text" class="form-control" id="lastName" placeholder="" value="" required>
@@ -89,7 +121,8 @@
         <div class="row">
           <div class="col">
             <div class="input-group mb-3">
-              <input type="text" class="form-control" placeholder="Add a field" aria-label="Recipient's username" aria-describedby="button-addon2">
+              <input type="text" class="form-control" placeholder="Add a field" aria-label="Recipient's username"
+                aria-describedby="button-addon2">
               <div class="input-group-append">
                 <button class="btn btn-outline-primary" type="button" id="button-addon2">Button</button>
               </div>
@@ -109,19 +142,21 @@
           </div>
         </div>
 
-       <div class="row">
-         <div class="col">
-          <label for="exampleFormControlTextarea1">Command to be executed</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-         </div>
-       </div>
-        
-       
+        <div class="row">
+          <div class="col">
+            <label for="exampleFormControlTextarea1">Command to be executed</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3">
+            {{command}} {{paranttemplate}} {{childtemplate}} {{field}}
+          </textarea>
+          </div>
+        </div>
+
+
         <hr class="mb-4">
         <button class="btn btn-primary btn-lg btn-block" type="submit">Copy command to Clipboard</button>
       </form>
     </div>
-    
+
   </div>
 
   <footer class="my-5 pt-5 text-muted text-center text-small">
