--- a/client/rest-api-client/src/app/app.component.html
+++ b/client/rest-api-client/src/app/app.component.html
@@ -16,6 +16,7 @@
   </nav>
   <a class="btn btn-outline-primary" href="#">Sign up</a>
 </div>
+<h1>Command Generator</h1>
 <h2>Parent template name</h2>
 <input [(ngModel)]="paranttemplate" /> <br /><br />
 <p> {{paranttemplate}} </p>
