--- a/client/rest-api-client/src/app/app.component.html
+++ b/client/rest-api-client/src/app/app.component.html
@@ -25,15 +25,6 @@
       <div class="row">
         <div class="col">
           <h4 class="mb-3">Select Template Command Type</h4>
-
-          <label class="container"> 
-            <input type="checkbox" [(ngModel)]="theCheckbox"  >
-                Clear dist folder <span *ngIf="marked"></span><span *ngIf="!marked"></span>
-                {{theCheckbox}}
-            
-              <span class="checkmark"></span>
-            </label>  
-
           <div class="d-block my-3">
             <div class="custom-control custom-radio">
               <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked required
@@ -73,7 +64,22 @@
             </div>
 
         </div>
-      
+        <div class="row">
+          <div class="col">
+            <div class="form-check">
+              <input type="checkbox" [(ngModel)]="clearDistCheckbox" class="form-check-input" id="clearDistFolderId">
+              <label class="form-check-label" for="clearDistFolderId">Clear dist folder</label>
+            </div>
+            
+            <!-- <label class="container"> 
+              <input type="checkbox" [(ngModel)]="theCheckbox"  >
+                  Clear dist folder <span *ngIf="marked"></span><span *ngIf="!marked"></span>
+                  {{theCheckbox}}
+              
+                <span class="checkmark"></span>
+              </label>  -->
+          </div>
+        </div>
 
         <div class="row">
           <div class="col">
