--- a/client/rest-api-client/src/app/app.component.html
+++ b/client/rest-api-client/src/app/app.component.html
@@ -27,73 +27,48 @@
           <h4 class="mb-3">Select Template Command Type</h4>
           <div class="d-block my-3">
             <div class="custom-control custom-radio">
-              <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked required
-                (click)="onSelectTemplateType('angular')">
-              <label class="custom-control-label" for="credit">Angular Template</label>
+              <input id="angularTemplateId" name="templateType" type="radio" class="custom-control-input" checked
+                required (click)="onSelectTemplateType('angular')">
+              <label class="custom-control-label" for="angularTemplateId">Angular Template</label>
             </div>
             <div class="custom-control custom-radio">
-              <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required
+              <input id="restApiTemplateId" name="templateType" type="radio" class="custom-control-input" required
                 (click)="onSelectTemplateType('restapi')">
-              <label class="custom-control-label" for="debit">Rest Api Template</label>
+              <label class="custom-control-label" for="restApiTemplateId">Rest Api Template</label>
             </div>
           </div>
-
-          <div class="col-md-6 mb-3" *ngIf="childTemplateVisibility">
-            <label for="lastName">Child name</label>
-            <input type="text" class="form-control" id="lastName" placeholder="" value="" required
-              [(ngModel)]="childTemplateValue" [ngModelOptions]="{standalone: true}">
-            <div class="invalid-feedback">
-              Valid last name is required.
-            </div>
-          </div>
-
-
         </div>
       </div>
 
       <form class="needs-validation" *ngIf="angularTemplateVisibility" novalidate>
-        <h4 class="mb-3">Customize your ANGULAR API</h4>
-    
-        <div class="row">
-      
-            <label>Angular Template name</label>
-            <input type="text" class="form-control" id="angularTemplateValue" placeholder="" value="" required
-              [(ngModel)]="angularTemplateValue" [ngModelOptions]="{standalone: true}">
-            <div class="invalid-feedback">
-              Valid last name is required.
-            </div>
+        <h4 class="mb-3">Customize your Angular Module</h4>
 
-        </div>
         <div class="row">
           <div class="col">
-            <div class="form-check">
-              <input type="checkbox" [(ngModel)]="clearDistCheckbox" class="form-check-input" id="clearDistFolderId">
-              <label class="form-check-label" for="clearDistFolderId">Clear dist folder</label>
-            </div>
-            
-            <!-- <label class="container"> 
-              <input type="checkbox" [(ngModel)]="theCheckbox"  >
-                  Clear dist folder <span *ngIf="marked"></span><span *ngIf="!marked"></span>
-                  {{theCheckbox}}
-              
-                <span class="checkmark"></span>
-              </label>  -->
+             <label>Angular Module name</label>
+              <input [(ngModel)]="angularTemplateValue" class="form-control" id="angularTemplateValue" placeholder=""
+                value="" required [ngModelOptions]="{standalone: true}"
+                (ngModelChange)="onAngularTemplateValueChange($event)">
+              <div class="invalid-feedback">
+                Valid last name is required.
+              </div>
           </div>
         </div>
 
-        <div class="row">
+
+        <!-- <div class="row">
           <div class="col">
             <label for="exampleFormControlTextarea1">Command to be executed</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" #inputTarget [(ngModel)]="angularCommand" 
-              [ngModelOptions]="{standalone: true}" >
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" #inputTarget
+              [(ngModel)]="angularCommand" [ngModelOptions]="{standalone: true}">
           </textarea>
           </div>
-        </div>
+        </div> -->
 
 
-        <hr class="mb-4">
+        <!-- <hr class="mb-4">
         <button class="btn btn-primary btn-lg btn-block" type="button" [ngxClipboard]="inputTarget">Copy command
-          to Clipboard</button>
+          to Clipboard</button> -->
       </form>
 
       <form class="needs-validation" *ngIf="apiTemplateVisibility" novalidate>
@@ -116,47 +91,44 @@
 
             <div class="d-block my-3">
               <div class="custom-control custom-radio">
-                <input id="credit" name="paymentMethod" type="radio" class="custom-control-input" checked required
+                <input id="parentApiId" name="paymentMethod" type="radio" class="custom-control-input" checked required
                   (click)="onSelectApiType('parent')">
-                <label class="custom-control-label" for="credit">Parent</label>
+                <label class="custom-control-label" for="parentApiId">Parent</label>
               </div>
               <div class="custom-control custom-radio">
-                <input id="debit" name="paymentMethod" type="radio" class="custom-control-input" required
+                <input id="childApiId" name="paymentMethod" type="radio" class="custom-control-input" required
                   (click)="onSelectApiType('child')">
-                <label class="custom-control-label" for="debit">Child</label>
+                <label class="custom-control-label" for="childApiId">Child</label>
               </div>
               <div class="custom-control custom-radio">
-                <input id="paypal" name="paymentMethod" type="radio" class="custom-control-input" required
+                <input id="fileApiId" name="paymentMethod" type="radio" class="custom-control-input" required
                   (click)="onSelectApiType('file')">
-                <label class="custom-control-label" for="paypal">File</label>
+                <label class="custom-control-label" for="fileApiId">File</label>
               </div>
             </div>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6 mb-3" *ngIf="parentTemplateVisibility">
-            <label for="lastName">Angular Template ame</label>
-            <input type="text" class="form-control" id="lastName" placeholder="" value="" required
+          <div class="col-md-6 mb-3">
+            <div class="col-md-6 mb-3" *ngIf="parentTemplateVisibility"></div>
+            <label for="parentTemplateVisibility">Rest Api Template Name</label>
+            <input type="text" class="form-control" id="parentTemplateVisibility" placeholder="" value="" required
               [(ngModel)]="parentTemplateValue" [ngModelOptions]="{standalone: true}">
             <div class="invalid-feedback">
               Valid last name is required.
             </div>
           </div>
-
-
-
           <div class="col-md-6 mb-3" *ngIf="childTemplateVisibility">
-            <label for="lastName">Child name</label>
-            <input type="text" class="form-control" id="lastName" placeholder="" value="" required
+            <label for="childTemplateVisibility">Child name</label>
+            <input type="text" class="form-control" id="childTemplateVisibility" placeholder="" value="" required
               [(ngModel)]="childTemplateValue" [ngModelOptions]="{standalone: true}">
             <div class="invalid-feedback">
               Valid last name is required.
             </div>
           </div>
-
           <div class="col-md-6 mb-3" *ngIf="fileTemplateVisibility">
-            <label for="lastName">File name</label>
-            <input type="text" class="form-control" id="lastName" placeholder="" value="" required
+            <label for="fileTemplateVisibility">File name</label>
+            <input type="text" class="form-control" id="fileTemplateVisibility" placeholder="" value="" required
               [(ngModel)]="fileTemplateValue" [ngModelOptions]="{standalone: true}">
             <div class="invalid-feedback">
               Valid last name is required.
@@ -169,8 +141,8 @@
               <input type="text" class="form-control" placeholder="Add a field" aria-label="Recipient's username"
                 aria-describedby="button-addon2" [(ngModel)]="fieldName" [ngModelOptions]="{standalone: true}">
               <div class="input-group-append">
-                <button class="btn btn-outline-primary" type="button" id="button-addon2"
-                  (click)="addField()">Add</button>
+                <button class="btn btn-outline-primary" type="button" id="button-addon2" (click)="addField()"
+                  [ngModelOptions]="{standalone: true}">Add</button>
               </div>
             </div>
           </div>
@@ -180,29 +152,42 @@
             <h4 class="mb-3">Fields</h4>
             <ul class="list-group">
               <li class="list-group-item" *ngFor="let field of fields">
-                {{field}} <button class="btn btn-sm btn-danger" type="button"
-                  (click)="removeField(field)">Remove</button>
+                {{field}} <button class="btn btn-sm btn-danger" type="button" (click)="removeField(field)"
+                  [ngModelOptions]="{standalone: true}">Remove</button>
               </li>
 
             </ul>
           </div>
         </div>
 
-        <div class="row">
-          <div class="col">
-            <label for="exampleFormControlTextarea1">Command to be executed</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" #inputTarget [(ngModel)]="command"
-              [ngModelOptions]="{standalone: true}">
 
-          </textarea>
+      </form>
+
+      <div class="row">
+        <div class="col">
+          <div class="form-check m-2">
+            <input type="checkbox" [(ngModel)]="clearDistCheckbox" class="form-check-input" id="clearDistFolderId"
+              [ngModelOptions]="{standalone: true}" (ngModelChange)="onClearDistValueChannge($event)">
+            <label class="form-check-label" for="clearDistFolderId">Clear dist folder</label>
+            {{clearDistCheckbox}}
           </div>
         </div>
+      </div>
+
+      <div class="row">
+        <div class="col">
+          <label for="exampleFormControlTextarea1">Command to be executed</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" #inputTarget [(ngModel)]="command"
+            [ngModelOptions]="{standalone: true}">
+
+          </textarea>
+        </div>
+      </div>
 
 
-        <hr class="mb-4">
-        <button class="btn btn-primary btn-lg btn-block" type="button" [ngxClipboard]="inputTarget">Copy command
-          to Clipboard</button>
-      </form>
+      <hr class="mb-4">
+      <button class="btn btn-primary btn-lg btn-block" type="button" [ngxClipboard]="inputTarget">Copy command
+        to Clipboard</button>
     </div>
 
   </div>
